make pwa compatable

--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "latest",
     "clsx": "^2.1.1",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^3.4.0",
-    "uuid": "^13.0.0",
     "tailwindcss": "latest",
-    "@tailwindcss/postcss": "latest"
+    "uuid": "^13.0.0"
   }
 }
