--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^3.4.0",
